# medical-ai-platform

./: .dockerignore  .env.docker  .gitignore  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  README.md  codecov.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  pyproject.toml  review_diff.txt  review_knowledge.txt  review_reranker.txt  review_retriever.txt
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  check_schema.py  check_schema_vp.py  fix_admin.py  init_admin.py  migrate_db.py  migrate_personality_type.py  requirements.txt  setup.py  test_db.py
backend/app/: celery_app.py  main.py
backend/data/: entity_mapping.json  medical_dict.txt
backend/evaluation/: ab_compare.py  config.py  datasets.py  metrics.py  rag_eval.py  report.py  runners.py
backend/scripts/: ab_test_index.py  backup_db.md  backup_db.sh  seed_patients.py  verify_patients.py
backend/tests/: conftest.py  test_access_control.py  test_auth_error_handling.py  test_auth_password_length.py  test_data_governance.py  test_e2e.py  test_llm_cache.py  test_llm_failover.py  test_react_upgrade.py  test_security_hardening.py
database/: init.sql  migrate_v10.sql  migrate_v2.sql  migrate_v3.sql  migrate_v4.sql  migrate_v5.sql  migrate_v6.sql  migrate_v7.sql  migrate_v8.sql  migrate_v9.sql  seed.sql
dataset/patient100_21/: patient100_21.json  (+4 more)
docs/: platform-documentation.md  prompt-and-provider-adapter.md  technical-document.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+803 files in other folders)
