[project]
name = "medical-ai-platform"
version = "1.0.0"
description = "基于多智能体的医生临床问诊评估平台"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # 行长度由 black 控制

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
